@@ -25,6 +25,7 @@ Bugfixes:
   * Interwiki link CSS should match internal link CSS, not external link CSS,
     and if no link text is specified the default text should display the
     interwiki prefix.  Reported by floatingworld.
+  * Fix category redirects of the form "#REDIRECT [[Category:Example]]".
 
 Translation Updates:
 
